# practice

./: .gitignore  CMakeLists.txt  README.md
.github/scripts/: build-and-test.sh
.github/workflows/: main.yml
include/: ch1.hpp  ch2.hpp  ch2_ll.hpp
src/: blah_tester.cpp  cast_testers.cpp  ch1.cpp  ch1_main.cpp  ch2.cpp  ch2_ll.cpp  ch2_ll_tester.cpp  ct
test/: build_line.sh  build_line_freebsd.sh  build_line_linux.sh  build_line_windows.ps1  ch1_test.cpp  ch2_test.cpp  main_test.cpp
